--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -12,14 +12,24 @@ spec:
       labels:
         app: linkding
     spec:
+      securityContext:
+        fsGroup: 33 # www-data group ID
+        runAsUser: 33 # www-data user ID
+        runAsGroup: 33 # www-data group ID
+
       containers:
         - name: linkding
           image: sissbruecker/linkding:1.31.0
+
           ports:
             - containerPort: 9090
+          securityContext:
+            allowPrivilegeEscalation: false
+
           volumeMounts:
             - mountPath: "/etc/linkding/data/"
               name: linkding-data-pvc
+
       volumes:
         - name: linkding-data-pvc
           persistentVolumeClaim:
