--- a/apps/base/linkding/kustomization.yaml
+++ b/apps/base/linkding/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   # - secrets.yaml
   # - networking.yaml
-  - deployment.yaml
+  # - deployment.yaml
   - namespace.yaml
-  - storage.yaml
-  - service.yaml
+  # - storage.yaml
+  # - service.yaml
