--- a/apps/staging/linkding/linkding-container-env-secret.yaml
+++ b/apps/staging/linkding/linkding-container-env-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-    LD_SUPERUSER_NAME: ENC[AES256_GCM,data:oGMTpBGDDEKuW02Tr5nhRA==,iv:XO8NsltMqzPMdps3MiirAghfFwbclw7XRluq2Am1zQw=,tag:CBOgG0/OuZIxpHBzNYIw/g==,type:str]
-    LD_SUPERUSERPASSWORD: ENC[AES256_GCM,data:uVNAtXTLdCwVebGM,iv:4rfgeMpk55tC5ZcU1us9JFtkv/bdLXUngIzkj3YdnUI=,tag:svN8E3wpbQLgv8KVPZxrQw==,type:str]
+    LD_SUPERUSER_NAME: ENC[AES256_GCM,data:hrhem/Tn3hT73Zq9ci2BGg==,iv:qfDg8+i9v4GIOgypFI0eKeDG/L9pTMALLdlMgl5m2EA=,tag://ZNqIaM/Yj9DLfq5NGcHg==,type:str]
+    LD_SUPERUSER_PASSWORD: ENC[AES256_GCM,data:qycIk6p4FX/1f424,iv:2DZBIOe/kChGSTuV3PUldG11zeoqK3HcaFooZ1DykKI=,tag:tR1vDjOFD+FIQkUq+SW0eg==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -15,14 +15,14 @@ sops:
         - recipient: age17n6j3kf05x6jx6dy33xvng947wg0ev8764xrjmcy2akswc0ppd9s8c0jad
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEVC9OSGsvWjM1Zk12cS9F
-            ak14elNKMTdHcFVGR2pqWWRZS0RLNWFvbG00CjdMTVAydXloeGE2aFFqSUtnbVpK
-            UEU1RGJweUM0NnJkaWFXMGJDQkxGbzgKLS0tIHhjdEFTR2tEbmNIQzZUSG4xUy91
-            RUtiYWZnNkd5b2FtQmRiclZubkR4REkKkIsVLGhHCMjp6QMNrvOu9djuohOqI/7w
-            0Aot1oitMu13u1eTHBvKJc/7sZ79Nn8qf5L7O0YKmZ731Pc+M6uFBw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnUllLWHFFUGxES0kzbFZk
+            YW9pUmhzNE5UV3M1ZTErcVB2dklZNk5XS0JVCmxLQ3BxejY5TVFGdk0wdFlKUXdn
+            MWdUcHozNTB3Z0pKNWQvWHJrMHkvQjQKLS0tIEU4cVpsajNsMmVMelV4L1dkVjNF
+            ZUdKTHRSeS9ndlpXYjlmdW5mc1M0Rm8K01Xx3PRoTW/VlPt8YgitfktfJO1Ri8L1
+            xK5cItNmjSw1HQ2yS7NuJKhqh/DEBRNKOvax4cnrj26GxzKBqS3KVg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T10:38:35Z"
-    mac: ENC[AES256_GCM,data:RCckrym7sl8v8ci61MUgy2aoqOyqbxyXpC8lMuAE8y4W6w/ManHQ2IavA4pOXAnUw1+SBfZ1/iHvc5bGT0bYQuMOwHbq++PIuJq+4M6acTuDGPCnGilasXIO954mQLQmhM/UcrizyUSGE8VdnxR67KcPVYOJ4HABimz6WU2mVSI=,iv:fCGwn7OZVyt2yUTr7UX2xPUWFnGmXfCdO7SDGOV4wcU=,tag:/3v6QX/F28XTm75VZIt1Uw==,type:str]
+    lastmodified: "2025-01-28T12:34:52Z"
+    mac: ENC[AES256_GCM,data:iZvK7X8FHzGljq+gOsoQc3T/mNX9Swgkan5WabzVpnkya2nrHFzs+9C0lyu8XisqTH/Wdo+09sLC/Wi8I+7r+GBxDVUjhN39ApHn1Gl5wA+Ep4iYMjfphuMJpQVdycDhtR4k19ylzPujJrvOI/evsk4u62esEzhIVBiwj/nfPwY=,iv:APAVIQj+rDtOV75ypccdaYPNlT9v/47i5rwl7C6rbU0=,tag:zJYL1VKQbcnucBOOeb0/HQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
