fix: change grafana local domain name to grs

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -35,4 +35,5 @@ spec:
         enabled: true
         ingressClassName: traefik
         hosts:
-          - grafana.nevinlab.com
+          - grs.nevinlab.com
+        tls: []
