--- a/apps/base/audiobookshelf/deployment.yaml
+++ b/apps/base/audiobookshelf/deployment.yaml
@@ -12,10 +12,10 @@ spec:
       labels:
         app: audiobookshelf
     spec:
-      securityContext:
-        fsGroup: 1000 # user of node group ID
-        runAsUser: 1000 # user ID
-        runAsGroup: 1000 # user group ID
+      # securityContext:
+      #   fsGroup: 1000 # user of node group ID
+      #   runAsUser: 1000 # user ID
+      #   runAsGroup: 1000 # user group ID
 
       containers:
         - name: audiobookshelf
