--- a/apps/staging/audiobookshelf/kustomization.yaml
+++ b/apps/staging/audiobookshelf/kustomization.yaml
@@ -5,6 +5,5 @@ resources:
   - ../../base/audiobookshelf
   # - cloudflare.yaml
   # - cloudflare-secret.yaml
-  # - linkding-container-env-secret.yaml
-  # - ingress.yaml
+  - ingress.yaml
   - configmap.yaml
