--- a/apps/staging/audiobookshelf/abs-cloudflare.yaml
+++ b/apps/staging/audiobookshelf/abs-cloudflare.yaml
@@ -1,16 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cloudflared
+  name: abs-cloudflared
+  namespace: audiobookshelf
 spec:
   selector:
     matchLabels:
-      app: cloudflared
+      app: abs-cloudflared
   replicas: 2 # You could also consider elastic scaling for this deployment
   template:
     metadata:
       labels:
-        app: cloudflared
+        app: abs-cloudflared
     spec:
       containers:
       - name: cloudflared
@@ -45,12 +46,12 @@ spec:
       volumes:
       - name: creds
         secret:
-          secretName: linkding-tunnel-credentials
+          secretName: abs-tunnel-credentials
 
       # Create a config.yaml file from the ConfigMap below.
       - name: config
         configMap:
-          name: cloudflared
+          name: abs-cloudflared
           items:
           - key: config.yaml
             path: config.yaml
@@ -62,12 +63,12 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cloudflared
+  name: abs-cloudflared
 data:
   config.yaml: |
     # Name of the tunnel you want to run
 
-    tunnel: ldelite
+    tunnel: abselite
 
     credentials-file: /etc/cloudflared/creds/credentials.json
 
@@ -76,8 +77,8 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: linkding.nevinlab.com
-      service: http://linkding:9090
+    - hostname: audiobookshelf.nevinlab.com
+      service: http://audiobookshelf:3005
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
