--- a/apps/staging/audiobookshelf/kustomization.yaml
+++ b/apps/staging/audiobookshelf/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: audiobookshelf
 resources:
   - ../../base/audiobookshelf
-  # - cloudflare.yaml
-  # - cloudflare-secret.yaml
-  - ingress.yaml
-  - configmap.yaml
+  - abs-cloudflare.yaml
+  - abs-cloudflare-secret.yaml
+  - abs-ingress.yaml
+  - abs-configmap.yaml
