--- a/apps/staging/linkding/linkding-cloudflare-secret.yaml
+++ b/apps/staging/linkding/linkding-cloudflare-secret.yaml
@@ -4,7 +4,7 @@ data:
 kind: Secret
 metadata:
     creationTimestamp: null
-    name: tunnel-credentials
+    name: linkding-tunnel-credentials
 sops:
     kms: []
     gcp_kms: []
