--- a/apps/staging/audiobookshelf/abs-cloudflare.yaml
+++ b/apps/staging/audiobookshelf/abs-cloudflare.yaml
@@ -14,7 +14,7 @@ spec:
         app: abs-cloudflared
     spec:
       containers:
-      - name: cloudflared
+      - name: abs-cloudflared
         image: cloudflare/cloudflared:latest
         args:
         - tunnel
