--- a/apps/staging/audiobookshelf/abs-cloudflare-secret.yaml
+++ b/apps/staging/audiobookshelf/abs-cloudflare-secret.yaml
@@ -4,8 +4,7 @@ data:
 kind: Secret
 metadata:
     creationTimestamp: null
-    name: abstunnel-credentials
-    namespace: audiobookshelf
+    name: abs-tunnel-credentials
 sops:
     kms: []
     gcp_kms: []
