--- a/apps/base/vaultwarden/kustomization.yaml
+++ b/apps/base/vaultwarden/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: vaultwarden
 resources:
-  - ../../base/vaultwarden/
   - deployment.yaml
-  - service.yaml
+  # - service.yaml
   - namespace.yaml
   - storage.yaml
