--- a/apps/base/vaultwarden/service.yaml
+++ b/apps/base/vaultwarden/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: linkding
+  name: vaultwarden
 spec:
   ports:
-    - port: 9090
+    - port: 3003
   selector:
-    app: linkding
+    app: vaultwarden
   type: ClusterIP
