--- a/apps/base/vaultwarden/kustomization.yaml
+++ b/apps/base/vaultwarden/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: vaultwarden
 resources:
   - deployment.yaml
-  # - service.yaml
+  - service.yaml
   - namespace.yaml
   - storage.yaml
   - vaultwarden-configmap.yaml
