--- a/apps/base/vaultwarden/vaultwarden-configmap.yaml
+++ b/apps/base/vaultwarden/vaultwarden-configmap.yaml
@@ -4,5 +4,5 @@ metadata:
   name: vaultwarden-configmap
   namespace: vaultwarden
 data:
-  SINGUPS_ALLOWED: "true"
+  SINGUPS_ALLOWED: "false"
   DATA_FOLDER: "/data"
