feat: add cloudflared tunnel

--- a/apps/staging/vaultwarden/kustomization.yaml
+++ b/apps/staging/vaultwarden/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: vaultwarden
 resources:
   - ../../base/vaultwarden/
-  # - cloudflare.yaml
-  # - cloudflare-secret.yaml
+  - cloudflare.yaml
+  - vault-cloudflare-secret.yaml
   # - vaultwarden-env-secret.yaml
   - ingress.yaml
