add networking policy ingress only from app

--- a/apps/base/audiobookshelf/kustomization.yaml
+++ b/apps/base/audiobookshelf/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 # namespace:
 resources:
   # - secrets.yaml
-  # - networking.yaml
+  - network-policy.yaml
   - deployment.yaml
   - namespace.yaml
   - service.yaml
