add namespace limited ingress network policy

--- a/apps/base/audiobookshelf/network-policy.yaml
+++ b/apps/base/audiobookshelf/network-policy.yaml
@@ -14,7 +14,7 @@ spec:
       ports:
         - protocol: TCP
           port: 3005
-    - from:
-        - namespaceSelector:
-            matchLabels:
-              kubernetes.io/metadata.name: kube-system
+    # - from:
+    #     - namespaceSelector:
+    #         matchLabels:
+    #           kubernetes.io/metadata.name: kube-system
