--- a/apps/base/audiobookshelf/network-policy.yaml
+++ b/apps/base/audiobookshelf/network-policy.yaml
@@ -1,20 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: audiobookshelf
+  name: audiobookshelf-networkpolicy
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: audiobookshelf
+      app: audiobookshelf
   ingress:
     - from:
         - namespaceSelector:
             matchLabels:
-              app: audiobookshelf
+              # The Kubernetes control plane sets an immutable label kubernetes.io/metadata.name on all namespaces, the value of the label is the namespace name.
+              # While NetworkPolicy cannot target a namespace by its name with some object field, you can use the standardized label to target a specific namespace.
+              # https://kubernetes.io/docs/concepts/services-networking/network-policies/
+              kubernetes.io/metadata.name: audiobookshelf
       ports:
         - protocol: TCP
           port: 3005
-    - from:
-        - namespaceSelector:
-            matchLabels:
-              kubernetes.io/metadata.name: kube-system
+    # - from:
+    #     - namespaceSelector:
+    #         matchLabels:
+    #           kubernetes.io/metadata.name: kube-system
+      # ports:
+      #   - protocol: TCP
+      #     port: 3005
