add kube-system to ingress network policy

--- a/apps/base/audiobookshelf/network-policy.yaml
+++ b/apps/base/audiobookshelf/network-policy.yaml
@@ -17,10 +17,11 @@ spec:
       ports:
         - protocol: TCP
           port: 3005
-    # - from:
-    #     - namespaceSelector:
-    #         matchLabels:
-    #           kubernetes.io/metadata.name: kube-system
-      # ports:
-      #   - protocol: TCP
-      #     port: 3005
+
+    - from:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: kube-system
+      ports:
+        - protocol: TCP
+          port: 3005
