add namespace limited ingress network policy to linkding and vault

--- a/apps/base/linkding/kustomization.yaml
+++ b/apps/base/linkding/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   # - secrets.yaml
   # - networking.yaml
+  - network-policy.yaml
   - deployment.yaml
   - namespace.yaml
   - storage.yaml
