--- a/apps/base/vaultwarden/kustomization.yaml
+++ b/apps/base/vaultwarden/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: vaultwarden
 resources:
+  - network-policy.yaml
   - deployment.yaml
   - service.yaml
   - namespace.yaml
