--- a/infrastructure/controllers/base/renovate/network-policy.yaml
+++ b/infrastructure/controllers/base/renovate/network-policy.yaml
@@ -2,9 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: renovate-policy
-  namespace: renovate
 spec:
-  podSelector: {} # Applies to all pods in the renovate namespace
+  podSelector:
+    matchLabels:
+      app: renovate
   ingress:
   - from:
     - namespaceSelector:
