--- a/infrastructure/controllers/base/renovate/network-policy.yaml
+++ b/infrastructure/controllers/base/renovate/network-policy.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: renovate-policy
+  namespace: renovate
 spec:
   podSelector:
     matchLabels:
