--- a/infrastructure/controllers/base/renovate/configmap.yaml
+++ b/infrastructure/controllers/base/renovate/configmap.yaml
@@ -7,4 +7,4 @@ data:
   RENOVATE_AUTODISCOVER: "false"
   RENOVATE_GIT_AUTHOR: "David's Renovate Bot <bot@renovateapp.com>"
   RENOVATE_PLATFORM: "github"
-  LOG_LEVEL: "debug"
+  # LOG_LEVEL: "debug"
