--- a/clusters/staging/devops.yaml
+++ b/clusters/staging/devops.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: devops
+  name: devops-tools
   namespace: flux-system
 spec:
   interval: 10m0s
