--- a/devops/staging/jenkins/configmap.yaml
+++ b/devops/staging/jenkins/configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: audiobookshelf-configmap
-  namespace: audiobookshelf
+  name: jenkins-configmap
+  namespace: devop-tools
 data:
   NODE_ENV: "production"
   CONFIG_PATH: "/config"
   METADATA_PATH: "/metadata"
   SOURCE: "docker"
-  PORT: "3005"
+  PORT: "32000"
   USER: "1000:1000"
