--- a/devops/base/jenkins/service.yaml
+++ b/devops/base/jenkins/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins-service
+  name: jenkins
   namespace: devops-tools
   annotations:
       prometheus.io/scrape: 'true'
