--- a/devops/staging/jenkins/cloudflare.yaml
+++ b/devops/staging/jenkins/cloudflare.yaml
@@ -10,10 +10,10 @@ spec:
   template:
     metadata:
       labels:
-        app: jenkins-cloudflared
+        app: cloudflared
     spec:
       containers:
-      - name: jenkins-cloudflared
+      - name: cloudflared
         image: cloudflare/cloudflared:latest
         args:
         - tunnel
@@ -77,7 +77,7 @@ data:
 
     ingress:
     - hostname: jenkins.nevinlab.com
-      service: http://jenkins-server:32000
+      service: http://jenkins:32000
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
