--- a/devops/base/jenkins/network-policy.yaml
+++ b/devops/base/jenkins/network-policy.yaml
@@ -13,10 +13,10 @@ spec:
               # The Kubernetes control plane sets an immutable label kubernetes.io/metadata.name on all namespaces, the value of the label is the namespace name.
               # While NetworkPolicy cannot target a namespace by its name with some object field, you can use the standardized label to target a specific namespace.
               # https://kubernetes.io/docs/concepts/services-networking/network-policies/
-              kubernetes.io/metadata.name: devop-tools
+              kubernetes.io/metadata.name: devops-tools
       ports:
         - protocol: TCP
-          port: 3005
+          port: 32000
 
     - from:
         - namespaceSelector:
