--- a/devops/staging/jenkins/ingress.yaml
+++ b/devops/staging/jenkins/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: jenkins
-  namespace: devop-tools
+  namespace: devops-tools
 spec:
   ingressClassName: traefik
   rules:
