fix: set port to 3010

--- a/devops/staging/jenkins/ingress.yaml
+++ b/devops/staging/jenkins/ingress.yaml
@@ -13,6 +13,6 @@ spec:
               service:
                 name: jenkins
                 port:
-                  number: 8080 # was 32000
+                  number: 32000
             path: /
             pathType: Prefix
