--- a/clusters/staging/devops.yaml
+++ b/clusters/staging/devops.yaml
@@ -12,7 +12,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./devops/staging/jenkins
+  path: ./devops/staging
   prune: true
   decryption:
     provider: sops
