--- a/devops/base/jenkins/deployment.yaml
+++ b/devops/base/jenkins/deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - name: jenkins
         image: jenkins/jenkins:lts-jdk11
+        envFrom:
+          - configMapRef:
+              name: jenkins-configmap
         ports:
         - containerPort: 9100
         volumeMounts:
