--- a/devops/base/jenkins/deployment.yaml
+++ b/devops/base/jenkins/deployment.yaml
@@ -12,17 +12,44 @@ spec:
       labels:
         app: jenkins
     spec:
+      securityContext:
+            fsGroup: 1000
+            runAsUser: 1000
+      serviceAccountName: jenkins-admin
       containers:
-      - name: jenkins
-        image: jenkins/jenkins:lts-jdk11
-        envFrom:
-          - configMapRef:
-              name: jenkins-configmap
-        ports:
-        - containerPort: 8080
-        volumeMounts:
-        - name: jenkins-data-pvc
-          mountPath: /var/jenkins_home
+        - name: jenkins
+          image: jenkins/jenkins:lts
+          resources:
+            limits:
+              memory: "2Gi"
+              cpu: "1000m"
+            requests:
+              memory: "500Mi"
+              cpu: "500m"
+          ports:
+            - name: httpport
+              containerPort: 8080
+            - name: jnlpport
+              containerPort: 50000
+          livenessProbe:
+            httpGet:
+              path: "/login"
+              port: 8080
+            initialDelaySeconds: 90
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 5
+          readinessProbe:
+            httpGet:
+              path: "/login"
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          volumeMounts:
+            - name: jenkins-data-pvc
+              mountPath: /var/jenkins_home
       volumes:
         - name: jenkins-data-pvc
           persistentVolumeClaim:
