--- a/devops/base/jenkins/serviceAccount.yaml
+++ b/devops/base/jenkins/serviceAccount.yaml
@@ -1,4 +1,13 @@
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: jenkins-admin
+rules:
+  - apiGroups: [""]
+    resources: ["*"]
+    verbs: ["*"]
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -6,65 +15,8 @@ metadata:
   namespace: devops-tools
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  annotations:
-    rbac.authorization.kubernetes.io/autoupdate: "true"
-  labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-  name: jenkins-admin
-rules:
-- apiGroups:
-  - '*'
-  resources:
-  - statefulsets
-  - services
-  - replicationcontrollers
-  - replicasets
-  - podtemplates
-  - podsecuritypolicies
-  - pods
-  - pods/log
-  - pods/exec
-  - podpreset
-  - poddisruptionbudget
-  - persistentvolumes
-  - persistentvolumeclaims
-  - jobs
-  - endpoints
-  - deployments
-  - deployments/scale
-  - daemonsets
-  - cronjobs
-  - configmaps
-  - namespaces
-  - events
-  - secrets
-  verbs:
-  - create
-  - get
-  - watch
-  - delete
-  - list
-  - patch
-  - update
-- apiGroups:
-  - ""
-  resources:
-  - nodes
-  verbs:
-  - get
-  - list
-  - watch
-  - update
----
-apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  annotations:
-    rbac.authorization.kubernetes.io/autoupdate: "true"
-  labels:
-    kubernetes.io/bootstrapping: rbac-defaults
   name: jenkins-admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
