--- a/devops/base/jenkins/service.yaml
+++ b/devops/base/jenkins/service.yaml
@@ -2,9 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins
+  namespace: devops-tools
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: /
+    prometheus.io/port: "8080"
 spec:
-  ports:
-    - port: 8080
   selector:
-    app: jenkins
-  type: ClusterIP
+    app: jenkins-server
+  ports:
+    - name: httpport
+      port: 8080
+      targetPort: 8080
+    - name: jnlpport
+      port: 50000
+      targetPort: 50000
