--- a/devops/base/jenkins/clusterIP-service.yaml
+++ b/devops/base/jenkins/clusterIP-service.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-cluster
-  namespace: devops-tools
 spec:
   ports:
     - port: 8080
+    - port: 32000
+    - port: 50000
   selector:
     app: jenkins-server
   type: ClusterIP
