--- a/devops/staging/jenkins/ingress.yaml
+++ b/devops/staging/jenkins/ingress.yaml
@@ -11,7 +11,7 @@ spec:
         paths:
           - backend:
               service:
-                name: jenkins
+                name: jenkins-server
                 port:
                   number: 8080
             path: /
