--- a/devops/base/jenkins/clusterIP-service.yaml
+++ b/devops/base/jenkins/clusterIP-service.yaml
@@ -12,7 +12,7 @@ spec:
       port: 32000
       targetPort: 32000
       protocol: TCP
-    - name: jnlp_port
+    - name: jnlp-port
       port: 50000
       targetPort: 50000
       protocol: TCP
