--- a/devops/base/jenkins/service.yaml
+++ b/devops/base/jenkins/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins
+  name: jenkins-service
   namespace: devops-tools
   annotations:
     prometheus.io/scrape: "true"
@@ -14,6 +14,9 @@ spec:
     - name: httpport
       port: 8080
       targetPort: 8080
+    - name: jenkins-agent
+      port: 32000
+      targetPort: 32000
     - name: jnlpport
       port: 50000
       targetPort: 50000
