fix: correct label

--- a/devops/base/jenkins/serviceAccount.yaml
+++ b/devops/base/jenkins/serviceAccount.yaml
@@ -11,7 +11,7 @@ metadata:
   name: jenkins
   namespace: devops-tools
   labels:
-    "app.kubernetes.io/name": "jenkins"
+    "app.kubernetes.io/name": "jenkins-server"
 rules:
   - apiGroups: [""]
     resources: ["pods"]
