--- a/devops/staging/jenkins/cloudflare.yaml
+++ b/devops/staging/jenkins/cloudflare.yaml
@@ -77,12 +77,12 @@ data:
 
     ingress:
     - hostname: jenkins.nevinlab.com
-      service: http://jenkins-cluster:8080
+      service: http://jenkins-cluster:8080 # connect to the the service (clusterIP in this case)
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
     # in the connection from cloudflared to your local service, not from the internet to cloudflared.
-    - hostname: hello.example.com
+    - hostname: hello.nevinlab.com
       service: hello_world
     # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
     - service: http_status:404
