--- a/devops/base/jenkins/clusterIP-service.yaml
+++ b/devops/base/jenkins/clusterIP-service.yaml
@@ -2,20 +2,21 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-cluster
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: /
+    prometheus.io/port: "8080"
 spec:
   ports:
-    - name: http
+    - name: httpport
       port: 8080
       targetPort: 8080
-      protocol: TCP
-    - name: jenkins-agent
-      port: 32000
-      targetPort: 32000
-      protocol: TCP
-    - name: jnlp-port
-      port: 50000
-      targetPort: 50000
-      protocol: TCP
+    # - name: jenkins-agent
+    #   port: 32000
+    #   targetPort: 32000
+    # - name: jnlpport
+    #   port: 50000
+    #   targetPort: 50000
   selector:
     app: jenkins-server
   type: ClusterIP
