--- a/devops/base/jenkins/service.yaml
+++ b/devops/base/jenkins/service.yaml
@@ -3,20 +3,16 @@ kind: Service
 metadata:
   name: jenkins-service
   namespace: devops-tools
-  annotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/path: /
-    prometheus.io/port: "8080"
 spec:
   selector:
     app: jenkins-server
+  type: NodePort
   ports:
-    - name: httpport
-      port: 8080
-      targetPort: 8080
     - name: jenkins-agent
       port: 32000
       targetPort: 32000
+      nodePort: 32000
     - name: jnlpport
       port: 50000
       targetPort: 50000
+      nodePort: 50000
