--- a/devops/staging/kustomization.yaml
+++ b/devops/staging/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: devops-tools
 resources:
-  - jenkins/
+  - jenkins
   # - cloudflare.yaml
   # - vault-cloudflare-secret.yaml
   # - vaultwarden-env-secret.yaml
