--- a/devops/staging/jenkins/cloudflare.yaml
+++ b/devops/staging/jenkins/cloudflare.yaml
@@ -78,8 +78,8 @@ data:
     ingress:
     - hostname: jenkins.nevinlab.com
       service: http://jenkins-cluster:8080 # connect to the the service (clusterIP in this case)
-    - hostname: jenkins.nevinlab.com
-      service: http://jenkins-service:32000 # connect to the the service (jenkins-service in this case)
+    # - hostname: jenkins.nevinlab.com
+    #   service: http://jenkins-service:32000 # connect to the the service (jenkins-service in this case)
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
