--- a/devops/base/jenkins/external-name.yaml
+++ b/devops/base/jenkins/external-name.yaml
@@ -1,8 +1,8 @@
--apiVersion: v1
--kind: Service
--metadata:
--  name: jenkins-external
--  namespace: devops-tools
--spec:
--  type: ExternalName
--  externalName: jenkins.nevinlab.com # external Jenkins URL
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins-external
+  namespace: devops-tools
+spec:
+  type: ExternalName
+  externalName: jenkins.nevinlab.com # external Jenkins URL
