--- a/apps/base/vaultwarden/vaultwarden-configmap.yaml
+++ b/apps/base/vaultwarden/vaultwarden-configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   name: vaultwarden-configmap
   namespace: vaultwarden
 data:
-  SIGNUPS_ALLOWED: "false"
+  SIGNUPS_ALLOWED: "true"
   INVITATIONS_ALLOWED: "false"
   DATA_FOLDER: "/data"
   ROCKET_PORT: "3003"
