--- a/apps/staging/audiobookshelf/abs-cloudflare-secret.yaml
+++ b/apps/staging/audiobookshelf/abs-cloudflare-secret.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 data:
-    credentials.json: ENC[AES256_GCM,data:dM9nwrf+rVjiwppn0j4FRZupsjp38W7R1xcZpGQoGp00QjyPifRgTnnwC1I=,iv:DVHKuiw8arB2zZCjOeHWC0EoIz97trptKpu3oQs3aYI=,tag:2Un5yXelKLzjFu1j1irGNQ==,type:str]
+    credentials.json:
+        AccountTag: ENC[AES256_GCM,data:7IuO44ST7aqnRYqn1VR7zusUvWWFoXswl27fXsIVnUc=,iv:Cr/e85fq5LjTo51+r9vxPG4RbAiWkcw21clZkq1xRjw=,tag:FM8FDSPYjX2B2+/KLUmBsQ==,type:str]
+        TunnelSecret: ENC[AES256_GCM,data:9lm4F40ZgjfwAnRzvVzDMOfDon9ZH1uAvyrC9g5aGWz2ZUY3emZkVsEGRkY=,iv:xI8eOCxcuM6mqN4xxQPlannGzCCDdUC9Lfz43wlv+UE=,tag:UM5NkSsEbHKD5rTdvE9qNQ==,type:str]
+        TunnelID: ENC[AES256_GCM,data:GGIjCblBx7tKFvC1E7DBtACJOTKOJf1sP6MJUe6hb3UfGKRd,iv:xYhTCyHtbFdn6/VZnT+GQZbJvt8SYB11PWe6O4+6KfU=,tag:cARn0a+PLu9iPs9FzcydQg==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -10,13 +13,13 @@ sops:
         - recipient: age17n6j3kf05x6jx6dy33xvng947wg0ev8764xrjmcy2akswc0ppd9s8c0jad
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBUWk5ZXJHbUM1Y3Q3NnN2
-            V3dFREorVmFUY1JvVnhnWFdqOUd1RncrVkNNCnZoUVo2ZmRZckZGRjN0T05GdUtK
-            NkdTYVRQeWRnYUR3NXlLekhuSUdtblkKLS0tIEZIRkhMR2R6SHgzNlFZTWczdHpC
-            LzVrQ3hGVGpsRS9oVHlBRW5VR0JHbFEKX43XaVrPLosijWpD950wM2wEXCzcE2CL
-            dSNsRLbX8PVw2exvBRgc6pQOUS/1l3JXH5M0MtIpDv83pIJ58kvuaQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvazFpdDdoMHZLZXBJb1M4
+            OTQ4cDlocHFxY2lLeDNEUHgzMlBaczRvd0M0Ckg4NUd2YVAybStUZEVBaXMyUVRV
+            bXprTkhQZVFnaTlPNXRZWTA3UUhKQncKLS0tIHlGNlQyaGpQa1ozV0xhRDc1Ujg1
+            dmJMVVRzd1dVYjJVOU5TQnVkRHlFTEkKdEzpwr38lzEHsgPJqthm5dkb9KllvJlJ
+            lZnnwWteKBB5I383GZsqcaSfG9ify/Jmr8Kk3CpJuEzue3h2sBCAzA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-06T13:11:39Z"
-    mac: ENC[AES256_GCM,data:y8tAIUN+EXvq7Ym7RD+vn54PljrNgbD5qJBQdPFc+8+qVHJ9vg/+FDN+MUnVdXGDuSiJpy7jof3Gwl+h7hLBDXWQ0YNhECsJ36lHx0tP+rh69PPpzNESSQxa0zY3FdoMXzOOYNoDZlMv9DUoYYBX5BKsBsJh68mbqugwQ5zEu0k=,iv:ZNv4mjRZrJY8J0dxu2TLbxcT7cE8kh+bNGt7mi6Cu2M=,tag:yNjurPGCdOy5RjT6X8tWjw==,type:str]
+    lastmodified: "2025-07-06T13:21:08Z"
+    mac: ENC[AES256_GCM,data:1a4HHp9g03BBVxJorQuYYd0UyBASRr5i1mHXLj1gAeTuD5HJDAHna/yENSOppnqvLIv1Iml/fL2hTrF/X1n5ifEqv8Nj2WBUDcRf67P6LGhg8z6KuzLywU04PaIWTZYrg8K19YebQvVVeuE/qRmclS1ZuT1WTefchmDqM6smJ3c=,iv:1JTpNobjbB71dPtFQxWvVvz7YGXxSPr4H6MltYhBodA=,tag:jF1JksWZWTVg1UvprpULUw==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
