update audiobook cloudflared secret

--- a/apps/staging/audiobookshelf/abs-cloudflare-secret.yaml
+++ b/apps/staging/audiobookshelf/abs-cloudflare-secret.yaml
@@ -1,25 +1,7 @@
 apiVersion: v1
 data:
-    credentials.json:
-        AccountTag: ENC[AES256_GCM,data:7IuO44ST7aqnRYqn1VR7zusUvWWFoXswl27fXsIVnUc=,iv:Cr/e85fq5LjTo51+r9vxPG4RbAiWkcw21clZkq1xRjw=,tag:FM8FDSPYjX2B2+/KLUmBsQ==,type:str]
-        TunnelSecret: ENC[AES256_GCM,data:9lm4F40ZgjfwAnRzvVzDMOfDon9ZH1uAvyrC9g5aGWz2ZUY3emZkVsEGRkY=,iv:xI8eOCxcuM6mqN4xxQPlannGzCCDdUC9Lfz43wlv+UE=,tag:UM5NkSsEbHKD5rTdvE9qNQ==,type:str]
-        TunnelID: ENC[AES256_GCM,data:GGIjCblBx7tKFvC1E7DBtACJOTKOJf1sP6MJUe6hb3UfGKRd,iv:xYhTCyHtbFdn6/VZnT+GQZbJvt8SYB11PWe6O4+6KfU=,tag:cARn0a+PLu9iPs9FzcydQg==,type:str]
+  credentials.json: eyJBY2NvdW50VGFnIjoiOGYzZTg5ODM0YjcxZjNmMzhjNjExNjE3MTlhNTg2ZTkiLCJUdW5uZWxTZWNyZXQiOiJLajM3ZW44UFVmdjZCSUttL2hXZkFXem1LRU1yeGd1UUFEdWljY3NxbW4wPSIsIlR1bm5lbElEIjoiMmE5YTQ1NDYtZGJiYy00ZjEzLTljZGItMjg3NmJiYTM2MDkxIiwiRW5kcG9pbnQiOiIifQ==
 kind: Secret
 metadata:
-    creationTimestamp: null
-    name: abs-tunnel-credentials
-sops:
-    age:
-        - recipient: age17n6j3kf05x6jx6dy33xvng947wg0ev8764xrjmcy2akswc0ppd9s8c0jad
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvazFpdDdoMHZLZXBJb1M4
-            OTQ4cDlocHFxY2lLeDNEUHgzMlBaczRvd0M0Ckg4NUd2YVAybStUZEVBaXMyUVRV
-            bXprTkhQZVFnaTlPNXRZWTA3UUhKQncKLS0tIHlGNlQyaGpQa1ozV0xhRDc1Ujg1
-            dmJMVVRzd1dVYjJVOU5TQnVkRHlFTEkKdEzpwr38lzEHsgPJqthm5dkb9KllvJlJ
-            lZnnwWteKBB5I383GZsqcaSfG9ify/Jmr8Kk3CpJuEzue3h2sBCAzA==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-06T13:21:08Z"
-    mac: ENC[AES256_GCM,data:1a4HHp9g03BBVxJorQuYYd0UyBASRr5i1mHXLj1gAeTuD5HJDAHna/yENSOppnqvLIv1Iml/fL2hTrF/X1n5ifEqv8Nj2WBUDcRf67P6LGhg8z6KuzLywU04PaIWTZYrg8K19YebQvVVeuE/qRmclS1ZuT1WTefchmDqM6smJ3c=,iv:1JTpNobjbB71dPtFQxWvVvz7YGXxSPr4H6MltYhBodA=,tag:jF1JksWZWTVg1UvprpULUw==,type:str]
-    encrypted_regex: ^(data|stringData)$
-    version: 3.10.2
+  creationTimestamp: null
+  name: abs-tunnel-credentials
