update import to include audiobookshel-configmap.yaml

--- a/apps/staging/audiobookshelf/kustomization.yaml
+++ b/apps/staging/audiobookshelf/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - abs-cloudflare.yaml
   - abs-cloudflare-secret.yaml
   - abs-ingress.yaml
-  - abs-configmap.yaml
+  - audiobookshelf-configmap.yaml
