--- a/apps/staging/mealie/mealie-ingress.yaml
+++ b/apps/staging/mealie/mealie-ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: audiobookshelf
-  namespace: audiobookshelf
+  name: mealie
+  namespace: mealie
 spec:
   ingressClassName: traefik
   rules:
-    - host: abs.nevinlab.com
+    - host: mealie.nevinlab.com
       http:
         paths:
           - backend:
               service:
-                name: audiobookshelf
+                name: mealie
                 port:
-                  number: 3005
+                  number: 9000
             path: /
             pathType: Prefix
