--- a/apps/staging/mealie/mealie-configmap.yaml
+++ b/apps/staging/mealie/mealie-configmap.yaml
@@ -7,8 +7,7 @@ data:
   ALLOW_SIGNUP: "false"
   PUID: "1000"
   PGID: "1000"
-  # CONFIG_PATH: "/config"
-  # METADATA_PATH: "/metadata"
-  # SOURCE: "docker"
+  BASE_URL: "https://mealie.nevinlab.com"
+  TZ: "Europe/Madrid"
   PORT: "9000"
   USER: "1000:1000"
