change mount path to app/data

--- a/apps/base/mealie/deployment.yaml
+++ b/apps/base/mealie/deployment.yaml
@@ -35,7 +35,7 @@ spec:
               protocol: TCP
 
           volumeMounts:
-            - mountPath: "/mealie"
+            - mountPath: "/app/data"
               name: mealie-data-pvc
 
       restartPolicy: Always
